--- a/custom_components/omnik/manifest.json
+++ b/custom_components/omnik/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "omnik",
-  "name": "Omnik Inverter",
-  "version": "0.1.0",
-  "iot_class": "cloud_polling",
-  "documentation": "https://github.com/hultenvp/home_assistant_omnik_solar/blob/master/README.md",
-  "issue_tracker": "https://github.com/hultenvp/home_assistant_omnik_solar/issues",
+  "name": "Omnik/Trannergy PV Inverter",
+  "version": "0.1.1",
+  "iot_class": "local_polling",
+  "documentation": "https://github.com/josh-sanders/home_assistant_omnik_solar/blob/master/README.md",
+  "integration_type": "device",
+  "issue_tracker": "https://github.com/josh-sanders/home_assistant_omnik_solar/issues",
   "dependencies": [],
-  "codeowners": ["@hultenvp"],
+  "codeowners": ["@josh-sanders"],
   "requirements": []
 }
